# micrograd-cpp

./: CMakeLists.txt  README.md  demo.cpp  engine.cpp  engine.h  main.cpp  neuronet.cpp  neuronet.h  visualization.cpp  visualization.h
data/: moonX.csv  moonX.json  moonY.csv  moonY.json
